Added Macedonian to thye list of default languages and updated all the translation catalogs

--- a/src/.tx/config
+++ b/src/.tx/config
@@ -6,6 +6,7 @@ source_file = core/spaces/locale/en_GB/LC_MESSAGES/django.po
 source_lang = en_GB
 trans.es_ES = core/spaces/locale/es_ES/LC_MESSAGES/django.po
 trans.gl_ES = core/spaces/locale/gl_ES/LC_MESSAGES/django.po
+trans.mk_MK = core/spaces/locale/mk_MK/LC_MESSAGES/django.po
 trans.fr = core/spaces/locale/fr_FR/LC_MESSAGES/django.po
 
 [ecidadania.accounts]
@@ -13,6 +14,7 @@ source_file = apps/ecidadania/accounts/locale/en_GB/LC_MESSAGES/django.po
 source_lang = en_GB
 trans.es_ES = apps/ecidadania/accounts/locale/es_ES/LC_MESSAGES/django.po
 trans.gl_ES = apps/ecidadania/accounts/locale/gl_ES/LC_MESSAGES/django.po
+trans.mk_MK = apps/ecidadania/accounts/locale/mk_MK/LC_MESSAGES/django.po
 trans.fr = apps/ecidadania/accounts/locale/fr_FR/LC_MESSAGES/django.po
 
 [ecidadania.calendar]
@@ -20,6 +22,7 @@ source_file = apps/ecidadania/cal/locale/en_GB/LC_MESSAGES/django.po
 source_lang = en_GB
 trans.es_ES = apps/ecidadania/cal/locale/es_ES/LC_MESSAGES/django.po
 trans.gl_ES = apps/ecidadania/cal/locale/gl_ES/LC_MESSAGES/django.po
+trans.mk_MK = apps/ecidadania/cal/locale/mk_MK/LC_MESSAGES/django.po
 trans.fr = apps/ecidadania/cal/locale/fr_FR/LC_MESSAGES/django.po
 
 [ecidadania.debate]
@@ -27,6 +30,7 @@ source_file = apps/ecidadania/debate/locale/en_GB/LC_MESSAGES/django.po
 source_lang = en_GB
 trans.es_ES = apps/ecidadania/debate/locale/es_ES/LC_MESSAGES/django.po
 trans.gl_ES = apps/ecidadania/debate/locale/gl_ES/LC_MESSAGES/django.po
+trans.mk_MK = apps/ecidadania/debate/locale/mk_MK/LC_MESSAGES/django.po
 trans.fr = apps/ecidadania/debate/locale/fr_FR/LC_MESSAGES/django.po
 
 [ecidadania.news]
@@ -34,6 +38,7 @@ source_file = apps/ecidadania/news/locale/en_GB/LC_MESSAGES/django.po
 source_lang = en_GB
 trans.es_ES = apps/ecidadania/news/locale/es_ES/LC_MESSAGES/django.po
 trans.gl_ES = apps/ecidadania/news/locale/gl_ES/LC_MESSAGES/django.po
+trans.mk_MK = apps/ecidadania/news/locale/mk_MK/LC_MESSAGES/django.po
 trans.fr = apps/ecidadania/news/locale/fr_FR/LC_MESSAGES/django.po
 
 [ecidadania.proposals]
@@ -41,6 +46,7 @@ source_file = apps/ecidadania/proposals/locale/en_GB/LC_MESSAGES/django.po
 source_lang = en_GB
 trans.es_ES = apps/ecidadania/proposals/locale/es_ES/LC_MESSAGES/django.po
 trans.gl_ES = apps/ecidadania/proposals/locale/gl_ES/LC_MESSAGES/django.po
+trans.mk_MK = apps/ecidadania/proposals/locale/mk_MK/LC_MESSAGES/django.po
 trans.fr = apps/ecidadania/proposals/locale/fr_FR/LC_MESSAGES/django.po
 
 [ecidadania.staticpages]
@@ -48,6 +54,7 @@ source_file = apps/ecidadania/staticpages/locale/en_GB/LC_MESSAGES/django.po
 source_lang = en_GB
 trans.es_ES = apps/ecidadania/staticpages/locale/es_ES/LC_MESSAGES/django.po
 trans.gl_ES = apps/ecidadania/staticpages/locale/gl_ES/LC_MESSAGES/django.po
+trans.mk_MK = apps/ecidadania/staticpages/locale/mk_MK/LC_MESSAGES/django.po
 trans.fr = apps/ecidadania/staticpages/locale/fr_FR/LC_MESSAGES/django.po
 
 [ecidadania.userprofile]
@@ -55,6 +62,7 @@ source_file = apps/thirdparty/userprofile/locale/en_GB/LC_MESSAGES/django.po
 source_lang = en_GB
 trans.es_ES = apps/thirdparty/userprofile/locale/es_ES/LC_MESSAGES/django.po
 trans.gl_ES = apps/thirdparty/userprofile/locale/gl_ES/LC_MESSAGES/django.po
+trans.mk_MK = apps/thirdparty/userprofile/locale/mk_MK/LC_MESSAGES/django.po
 trans.fr = apps/thirdparty/userprofile/locale/fr_FR/LC_MESSAGES/django.po
 
 [ecidadania.core]
@@ -62,6 +70,7 @@ source_file = e_cidadania/locale/en_GB/LC_MESSAGES/django.po
 source_lang = en_GB
 trans.es_ES = e_cidadania/locale/es_ES/LC_MESSAGES/django.po
 trans.gl_ES = e_cidadania/locale/gl_ES/LC_MESSAGES/django.po
+trans.mk_MK = e_cidadania/locale/mk_MK/LC_MESSAGES/django.po
 trans.fr = e_cidadania/locale/fr_FR/LC_MESSAGES/django.po
 
 [ecidadania.voting]
@@ -69,4 +78,5 @@ source_file = apps/ecidadania/voting/locale/en_GB/LC_MESSAGES/django.po
 source_lang = en_GB
 trans.es_ES = apps/ecidadania/voting/locale/es_ES/LC_MESSAGES/django.po
 trans.gl_ES = apps/ecidadania/voting/locale/gl_ES/LC_MESSAGES/django.po
+trans.mk_MK = apps/ecidadania/voting/locale/mk_MK/LC_MESSAGES/django.po
 trans.fr = apps/ecidadania/voting/locale/fr_FR/LC_MESSAGES/django.po
