--- a/private/templates/skeleton/css.cfg
+++ b/private/templates/skeleton/css.cfg
@@ -2,16 +2,13 @@
 ../themes/skeleton/layout.css
 ../scripts/ext/resources/css/ext-all.css
 ../themes/skeleton/xtheme-gray.css
-../themes/skeleton/footer.css
+../themes/skeleton/base.css
 ../themes/skeleton/menu.css
-../themes/skeleton/widgets.css
-../themes/skeleton/shortcut.css
 ../themes/skeleton/style.css
 ../themes/skeleton/homepage.css
 ../themes/skeleton/modules.css
 ../themes/skeleton/mobile.css
 ../themes/skeleton/print.css
-../themes/skeleton/report.css
 ../themes/skeleton/sandy.css
 plugins/colorbox.css
 plugins/jquery.autocomplete.css
